...
                        fontWeight = FontWeight.Bold
                    )

                    Spacer(modifier = Modifier.height(MovieAppTheme.spacing.lg))

                    Text(
                        text = "Özet",
                        style = MaterialTheme.typography.titleLarge,
                        fontWeight = FontWeight.SemiBold
                    )
                    Spacer(modifier = Modifier.height(MovieAppTheme.spacing.sm))
                    Text(
                        text = state.movie?.overview ?: "",
...

        DiscoverPopularButton(
            modifier = Modifier
                .align(Alignment.BottomCenter)
                .fillMaxWidth()
                .navigationBarsPadding()
                .testTag("discover_button")
                .padding(horizontal = MovieAppTheme.spacing.lg),
            onClick = {
                event(DetailContract.Event.OnDiscoverPopularClicked)
            }
        )

...
